# Advanced-Peripherals-Documentation

./: CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.cache/plugin/git-committers/: page-authors.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml  doc_report.yml
.github/workflows/: main.yml
docs/: extra.css  getstarted.md  index.md  roadmap.md
docs/1.16/changelog/: 0.7r.md
docs/1.16/integrations/: getstarted.md
docs/1.18/changelog/: 0.7r.md
docs/blog/: .authors.yml  index.md
docs/changelog/: 0.7r.md
docs/changelogs/: 0.7.24r.md  0.7r.md
docs/guides/: cooldowns_and_fuel_consumption.md  filters.md  how_to_report.md  nbt.md
docs/integrations/: getstarted.md  index.md
docs/items/: ar_goggles.md  chunk_controller.md  computer_tool.md  memory_card.md  pocket_computer.md
docs/metaphysics/: end_automata.md  husbandry_automata.md  overpowered_automata.md  weak_automata.md
docs/othersandutilities/: item_parameter.md
docs/peripheralproxy/: getstarted.md
docs/peripherals/: ar_controller.md  block_reader.md  chat_box.md  colony_integrator.md  energy_detector.md  environment_detector.md  geo_scanner.md  inventory_manager.md  me_bridge.md  nbt_storage.md  player_detector.md  redstone_integrator.md  rs_bridge.md
docs/turtles/: chatty_turtle.md  chunky_turtle.md  compass_turtle.md  end_automata.md  environment_turtle.md  geo_scanner_turtle.md  overpowered_weak_automata.md  player_turtle.md  weak_automata.md
overrides/: main.html
overrides/partials/: comments.html
(+160 files in other folders)
