[tool.poetry]
name = "advanced-peripherals-documentation"
version = "0.1.0"
description = ""
authors = ["Srendi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
python-markdown-math = "^0.8"
pyyaml = "^6.0.2"
mkdocs-glightbox = "^0.3.7"
mkdocs-git-committers-plugin-2 = "^2.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
